Revert "Fix: whitespace is collapsed in shell command output" -- it messes up non-plaintext commands (opened bug 398699)
This reverts commit e975183ddfec9748ec09330819c8fca5bfffd5fa.

--- a/bundles/org.eclipse.orion.client.ui/web/shell/shellPage.css
+++ b/bundles/org.eclipse.orion.client.ui/web/shell/shellPage.css
@@ -16,7 +16,7 @@ html,body {
   font-size: 10pt;
 }
 
-.gcli-row-out {
+.gcli-row-out > p {
 	white-space: pre;
 }
 
